# phrasify

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  Makefile  README.md  anki-convo.code-workspace  config-default.mk  main.tf  pyproject.toml  requirements-anki.txt  requirements.txt
.github/workflows/: python-package.yml  unit-tests.yml
experiments/: request_openai.py  try_async.py  try_async_multi_run.py  try_call_api.py  try_call_kubernetes.py  try_call_ollama.py  try_run_forever.py  try_stringio.py
k8s/: external-dns.yaml  namespaces.yaml
k8s/apps/: 1-example.yaml  anki-convo.yaml  ollama.yaml  phrasify.yaml
k8s/apps/chain/: Dockerfile  chain.yaml  requirements.txt
k8s/apps/chain/app/: main.py
k8s/envs/dev/: volumes.yaml
k8s/envs/dev-eks/: ingresses.yaml  volumes.yaml
k8s/envs/dev-eks/volumes/: pvc_pod_1.yaml  sc.yaml
k8s/envs/example/: secrets.yaml
k8s/manifests/chain/: chain.yaml
k8s/manifests/chain/app/: main.py
k8s/manifests/ollama/: ollama.yaml
requirements/: app.txt  default.txt  test.py3.10.txt  test.py3.11.txt  test.py3.8.txt  test.py3.9.txt
scripts/: ci-test.sh
src/anki_convo/: __about__.py  __init__.py  _paths.py  addition_filter.py  card.py  card_count_view.py  card_gen.py  card_generator.py  config.json  config.md  config.py  constants.py  env.py  error.py  factory.py  field_filter.py  llm_filter.py  logging.py  logging_config.py  logging_config.yaml  manifest.json  meta.json  openai.py
src/anki_convo/chains/: base.py  llm.py  llm_input.py  remote.py
src/anki_convo/hooks/: llm_filter.py
src/anki_convo/llms/: base.py  ollama.py  openai.py
src/anki_convo/user_files/: .env.example
src/anki_convo/user_files/prompts/: vocab-to-sentence-cards-in-deck.txt  vocab-to-sentence.txt  vocab-to-sentence.txt.example4
src/anki_convo_api/: main.py
src/anki_convo_api/routers/: cards.py  v1.py
src/phrasify/: __about__.py  __init__.py  _paths.py  card.py  card_gen.py  config.json  config.md  constants.py  env.py  error.py  event_loop.py  factory.py  logging_config.json  manifest.json  meta.json  ollama.py  openai.py
src/phrasify/chains/: base.py  llm.py  remote.py
src/phrasify/dialogs/: core.py  openai_api_key.py
src/phrasify/hooks/: core.py  phrasify_filter.py
src/phrasify/llms/: ollama.py  openai.py
src/phrasify/user_files/: .env.example  README.txt
src/phrasify/user_files/prompts/: vocab-to-sentence-cards-in-deck.txt  vocab-to-sentence-csv.txt  vocab-to-sentence.txt  vocab-to-sentence.txt.example  vocab-to-sentence.txt.example2  vocab-to-sentence.txt.example3  vocab-to-sentence.txt.example4
src/phrasify_api/routers/: cards.py
terraform/: .terraform.lock.hcl  0-variables.tf  10-helm.tf  10-iam-controller.tf  10-kubernetes.tf  11-controller.tf  12-external-dns.tf  13-ingresses.tf  13-kube-prometheus-stack.tf  14-ingresses.tf  15-efs.tf  16-efs-csi-driver.tf  17-efs-sc.tf  4-subnets.tf  5-nat.tf  6-routes.tf  7-eks.tf  8-nodes.tf  9-iam-oidc.tf  99-outputs.tf
terraform/policies/: ExternalDNSAccess.json
tests/: conftest.py  mocks.py  test_card_gen.py  test_factory.py  test_llm_filter.py  test_llms.py  test_phrasify_filter.py
